--- a/index.html
+++ b/index.html
@@ -1,39 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>yawgbot | web interface</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>what wg-gesucht should look like</title>
   </head>
-  <body class="bg-gray-100 w-11/12 py-2 sm:w-3/4 mx-auto">
-    <div class="border overflow-x-auto relative shadow-md rounded">
-      <table
-        class="w-full text-xs lg:text-sm text-left text-gray-800 table-auto"
+  <style type="text/tailwindcss">
+    @layer utilities {
+      .dark-bg {
+        background: linear-gradient(
+            rgba(255, 255, 255, 0.4),
+            rgba(255, 255, 255, 0.4)
+          ),
+          url("/static/bg-dark.png");
+      }
+      a {
+        @apply text-blue-500 dark:text-blue-400 hover:underline hover:bg-blue-200 hover:text-blue-800;
+      }
+    }
+  </style>
+  <script>
+    if (localStorage.theme === "dark") {
+      document.documentElement.classList.add("dark");
+    }
+    tailwind.config = {
+      darkMode: "class",
+    };
+    function toggleTheme() {
+      if (localStorage.theme !== "dark") {
+        document.documentElement.classList.add("dark");
+        localStorage.theme = "dark";
+      } else {
+        document.documentElement.classList.remove("dark");
+        localStorage.theme = "white";
+      }
+    }
+  </script>
+
+  <body
+    class="text-gray-600 dark:text-gray-200 bg-[url('/static/bg.png')] dark:bg-zinc-700"
+  >
+    <div
+      class="my-2 w-full px-2 sm:px-0 sm:w-5/12 2xl:w-3/12 mx-auto flex flex-col gap-y-2"
+    >
+      {% block content %} {% for l in listings %}
+      <div
+        class="p-2 group rounded border shadow-md hover:shadow-xl text-xs sm:text-sm bg-neutral-100 hover:bg-neutral-200 text-gray-600 dark:bg-zinc-800 dark:hover:bg-zinc-900 dark:text-gray-200 dark:border-zinc-900"
       >
-        <thead class="border-b text-gray-700 uppercase bg-gray-50">
-          <tr>
-            {% for col in listings[0].__table__.columns%}
-            <th scope="col" class="px-2 py-1">{{col}}</th>
-            {%endfor%}
-          </tr>
-        </thead>
-        <tbody>
-          {% for listing in listings %}
-          <tr class="even:bg-gray-100 bg-white border-b hover:bg-gray-50">
-            <td scope="row" class="px-2 font-bold">{{listing.id}}</td>
-            <td scope="row" class="px-2">{{listing.wg_id}}</td>
-            <td scope="row" class="px-2 whitespace-nowrap">{{listing.added_at}}</td>
-            <td scope="row" class="px-2">{{listing.price}}</td>
-            <td scope="row" class="px-2">{{listing.name}}</td>
-            <td scope="row" class="text-blue-500 px-2"><a href="{{listing.url}}">url</a></td>
-            <td scope="row" class="px-2 whitespace-nowrap">{{listing.location}}</td>
-            <td scope="row" class="px-2">{{listing.square_meters}}</td>
-            <td scope="row" class="px-2 whitespace-nowrap">{{listing.dates}}</td>
-          </tr>
-          {%endfor%}
-        </tbody>
-      </table>
+        <div class="grid grid-cols-12 gap-x-2">
+          <span class="col-span-12 flex gap-x-1 items-center">
+            <div class="h-4 w-4 bg-orange-400 rounded"></div>
+            <small class="text-gray-400 dark:stone-100"> · {{l.added_at}}</small>
+            <span class="ml-auto">
+              <a class="text-xs" href="/l/{{l.url}}">#{{l.wg_id}}</a>
+              <i class="bi bi-three-dots-vertical"></i>
+            </span>
+          </span>
+          <h1
+            class="col-span-12 first-letter:uppercase font-semibold truncate text-sm sm:text-lg text-black dark:text-white"
+          >
+            {{ l.name }}
+          </h1>
+          <img src="{{l.image}}" class="col-span-4 aspect-square" />
+          <div class="col-span-8 flex flex-col justify-between gap-y-2">
+            <div class="flex flex-col">
+              <div class="flex items-center gap-x-1">
+                <i class="bi bi-calendar-event-fill"></i>{{l.dates}}
+              </div>
+              <div class="flex items-center gap-x-1">
+                <i class="bi bi-geo-fill"></i> {{l.location}}
+              </div>
+              <div class="flex items-center gap-x-1">
+                <i class="bi bi-currency-euro"></i> {{l.price}}
+              </div>
+              <div class="flex items-center gap-x-1">
+                <i class="bi bi-rulers"></i> {{l.square_meters}}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      {% endfor %} {% endblock %}
+    </div>
+    <div
+      onclick="toggleTheme()"
+      class="print:hidden shadow-md fixed bottom-2 right-2 bg-gray-100 dark:bg-zinc-900 rounded w-8 h-8 flex justify-center items-center"
+    >
+      <i class="bi bi-circle-half"></i>
     </div>
   </body>
 </html>
+<style>
+  body {
+    font-family: "Barlow";
+  }
+
+  .Royal2q0 {
+    background-color: rgb(154, 136, 34);
+  }
+
+  .Royal2q1 {
+    background-color: rgb(245, 205, 180);
+  }
+
+  .Royal2q2 {
+    background-color: rgb(248, 175, 168);
+  }
+
+  .Royal2q3 {
+    background-color: rgb(253, 221, 160);
+  }
+
+  .Royal2q4 {
+    background-color: rgb(116, 160, 137);
+  }
+
+  .Zissou1q1 {
+    background-color: rgb(120, 183, 197);
+  }
+
+  .GrandBudapest2q3 {
+    background-color: rgb(114, 148, 212);
+  }
+
+  .BottleRocket2q1 {
+    background-color: rgb(203, 35, 20);
+  }
+
+  .GrandBudapest1q3 {
+    background-color: rgb(214, 114, 54);
+  }
+
+  .IsleofDogs1q0 {
+    background-color: rgb(153, 134, 165);
+  }
+</style>
