--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             >
                 <div class="grid grid-cols-12 gap-x-2">
                   <span class="col-span-12 flex gap-x-1 items-center">
-                    <div class="h-4 w-4 bg-orange-400 rounded"></div>
+                    <a class="rounded" href="{{l.platform}}"><div class="h-4 w-4 bg-[{{l.color}}] hover:bg-opacity-80 rounded"></div></a>
                     <small class="text-gray-400 dark:stone-100">
                       {{ l.added_at }}
                     </small>
