--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>what wg-gesucht should look like</title>
+    <title>yawgbot | web interface</title>
 </head>
 <style type="text/tailwindcss">
     @layer utilities {
